--- a/Content/Conclusion/extremeProgramming.tex
+++ b/Content/Conclusion/extremeProgramming.tex
@@ -8,10 +8,10 @@ In this section we will try to answer the third problem presented in \Cref{chap:
 \noindent Although XP is written by Kent Beck, several others, including himself, have embraced it and modified it, in an attempt to adapt it to their own needs.
 This means there exist several suggestions as to how to use XP.
 
-We tried experimenting with some of these suggestions, to see how each practice fit with our project.
-We ended up focusing on the practices \textit{pair programming} and \textit{planning game}, but did of course also make observations of the other ten practices.
+We tried experimenting with some of these suggestions, to see how each practise fit with our project.
+We ended up focusing on the practises \textit{pair programming} and \textit{planning game}, but did of course also make observations of the other ten practises.
 
-We found that some practices influenced each other, and these correlations between the practices made for some interesting possibilities of adaptation.
+We found that some practises influenced each other, and these correlations between the practises made for some interesting possibilities of adaptation.
 In the end we found a combination which worked well for the project, but many areas still needed improvement to be really good.
 
-In conclusion, XP can be adapted by using it, and it should be continuously adapted to fit the project's needs. There is always something that can be done to make it work just a little bit better, while still adhering to the main practices.
+In conclusion, XP can be adapted by using it, and it should be continuously adapted to fit the project's needs. There is always something that can be done to make it work just a little bit better, while still adhering to the main practises.
