--- a/Content/Methodology/scrumComparison.tex
+++ b/Content/Methodology/scrumComparison.tex
@@ -1,7 +1,7 @@
 \section{Extreme Programming versus Scrum}
 Scrum is one of, if not the, most popular agile methodology today.
 Almost all developers know what Scrum is, hence we will compare XP and Scrum.
-The two are similar, both being agile methodologies with self-organising teams, and similar meeting practices, however there exists some significant differences.
+The two are similar, both being agile methodologies with self-organising teams, and similar meeting practises, however there exists some significant differences.
 
 The most significant difference, is that Scrum does not have any development oriented practises.
 XP on the other hand, has plenty of development oriented practises. Practises such as pair programming, test-driven development, refactoring, automated testing, simple design, and so forth.
