--- a/Content/ReflectionMethodology/reflectionIntroduction.tex
+++ b/Content/ReflectionMethodology/reflectionIntroduction.tex
@@ -1,1 +1,1 @@
-This chapter contains the reflections and discussions about our use of XP in this project. The discussion is centered around the twelve main practices of XP, but with extra focus on two practices that were extra important for the project, namely pair programming and planning game. These two practices are especially interesting because they required us to change our usual way of working considerably, and extra effort was put into following these particular practices. This discussion is based on the meetings held during the project, the summaries of which can be found in \Cref{chap:temp}.
+This chapter contains the reflections and discussions about our use of XP in this project. The discussion is centered around the twelve main practises of XP, but with extra focus on two practises that were extra important for the project, namely pair programming and planning game. These two practises are especially interesting because they required us to change our usual way of working considerably, and extra effort was put into following these particular practises. This discussion is based on the meetings held during the project, the summaries of which can be found in \Cref{chap:temp}.
