--- a/Content/ReflectionMethodology/reflectionPairProgramming.tex
+++ b/Content/ReflectionMethodology/reflectionPairProgramming.tex
@@ -74,7 +74,7 @@ In situations where the technical skills of the driver were insufficient, the in
 
 The co-driver role was continuously reviewing the code and making sure it made sense in the larger perspective.
 To achieve this, his role was often to initialise the communication.
-For some it took a bit of practice to be able to break the ice, but once the fear of intrusion was overcome, it was no problem at all.
+For some it took a bit of practise to be able to break the ice, but once the fear of intrusion was overcome, it was no problem at all.
 Another difficulty we observed, was when the co-driver was too eager to share his thoughts, that he broke the driver's flow, just to tell him about a typo.
 This difficulty was remedied through experience, however, we are still not completely able to tell when the driver is ``in the zone''.
 We believe with experience this occurrence will be so rare, it will not affect the pair programming much.
