--- a/Content/ReflectionMethodology/reflectionPlanning.tex
+++ b/Content/ReflectionMethodology/reflectionPlanning.tex
@@ -29,7 +29,7 @@ It allows the customer to easier prioritise each user story, and it allows the d
 
 Estimating an user story correctly is, however, a difficult task.
 Many variables play a role in how long it takes to implement an user story, and it is often impossible to foresee them all.
-To try to reduce this problem we employed the practice of planning poker, where each member of the team gives their own (anonymous) estimation, and the final estimation is discussed afterwards.
+To try to reduce this problem we employed the practise of planning poker, where each member of the team gives their own (anonymous) estimation, and the final estimation is discussed afterwards.
 We found that in the first iterations we underestimated the amount of time needed for the more difficult issues, while we generally estimated correctly when it came to trivial issues.
 The underestimation was likely linked to our inexperience, and we tried to bring our new gained knowledge to the next planning meetings.
 This resulted in us beginning to overestimate the harder stories instead, as we were overcompensating for the fact that we underestimated them before.
