--- a/Content/StepCounter/dataCollection.tex
+++ b/Content/StepCounter/dataCollection.tex
@@ -16,6 +16,6 @@ To generate the sample data we had a person perform the following tasks while ca
 
 The purpose of task 1-5 is generate data the algorithms should analyse and correctly calculate the 100 steps taken. The data from task 6 should be interpreted as 0 steps taken.
 
-These tasks can then be repeated for all carrying positions, different smartphones and multiple persons. In practice the tasks were carried out with two people, the smartphone Samsung Galaxy S III and in one carrying position, strapped to the arm.
+These tasks can then be repeated for all carrying positions, different smartphones and multiple persons. In practise the tasks were carried out with two people, the smartphone Samsung Galaxy S III and in one carrying position, strapped to the arm.
 
 After the data collection, we are now ready to test algorithms against each other.
