--- a/Content/TemporaryWorkSheets/Methodology/retrospective1.tex
+++ b/Content/TemporaryWorkSheets/Methodology/retrospective1.tex
@@ -17,7 +17,7 @@ We have not at this time had the need or reason to refactor.
 
 \subsubsection{Simple Design}
 We have very complicated test cases with much replicated code. This is obviously a bad thing, but we contribute this to our inexperience with testing in Android Studio.
-We have not prioritised this practice, but we found that the production code (not test) was simple and without replication.
+We have not prioritised this practise, but we found that the production code (not test) was simple and without replication.
 
 \subsubsection{Pair Programming}
 We should limit ourselves to using one computer/monitor and stop using teamviewer. Optimally getting an external monitor to put between us as well as a keyboard and mouse.
@@ -27,7 +27,7 @@ We have found it difficult to solve some problems in pairs, as pair programming 
 
 \subsubsection{Collective Ownership}
 We have worked with ‘collective ownership-like’ approaches before, in that the entire group is responsible for all the code at the exam.
-Before we however used the practice of not editing (or reading) code written by other group members.
+Before we however used the practise of not editing (or reading) code written by other group members.
 We will in future sprints incorporate reading the code produced by others and review or refactor it if necessary.
 
 \subsubsection{Testing}
