--- a/Content/TemporaryWorkSheets/Methodology/retrospective2.tex
+++ b/Content/TemporaryWorkSheets/Methodology/retrospective2.tex
@@ -59,4 +59,4 @@ There were of course made tests for the changes in dynamic queue and database.
 
 \subsubsection{Continuous Integration}
 As mentioned, we have mainly worked on GUI this iteration. This means that we have used the ``\#20 GUI…'' branch as a surrogate master branch. We have done this because the GUI was not ready to be pushed to master. By assuming the GUI branch was master, we have used continuous integration daily, as we merge and build it multiple times a day.
-Further we find this practice to be beneficial in larger projects with multiple teams, as we are only a team of 4, we almost never work on more than two branches at the same time. 
+Further we find this practise to be beneficial in larger projects with multiple teams, as we are only a team of 4, we almost never work on more than two branches at the same time. 
