--- a/Content/TemporaryWorkSheets/Methodology/retrospective3.tex
+++ b/Content/TemporaryWorkSheets/Methodology/retrospective3.tex
@@ -57,7 +57,7 @@ We have found that the individual ‘modules’ in our code are not strongly def
 We found that the forced timed pair programming switch didn’t sit right with us. We experience multiple times that we should switch just before the current issue was done. This created a lot of overhead.
 We therefore decided to use a task-based approach where switches only are made between issues or between issues estimated to take more than 3 hours.
 
-We have used the practice of, when in problems, splitting the pair, where each partner then makes some prototypes to solve the problems. Then the pair reunites and solves the problem together.
+We have used the practise of, when in problems, splitting the pair, where each partner then makes some prototypes to solve the problems. Then the pair reunites and solves the problem together.
 
 We have had some sickness this iteration. This meant that we have not been pair programming when the members were working from home. This was not a problem since the tasks solved by individuals were sufficiently trivial. This gives rise to the question of when a task is trivial enough to not pair program.
 
