--- a/Content/TemporaryWorkSheets/Methodology/retrospective5.tex
+++ b/Content/TemporaryWorkSheets/Methodology/retrospective5.tex
@@ -17,7 +17,7 @@ We have encountered several issues when writing the report. Many of these issues
 
 \subsubsection{40-hour Work Week}
 
-The 40-hour work week practice is used to combat burnout.
+The 40-hour work week practise is used to combat burnout.
 In this iteration we clearly worked much less than 40 hours a week, however, we have still experienced burnout.
 
 One major culprit is when one is not sure about what to write (typically report) or what to do.
