--- a/Content/Test/testReflection.tex
+++ b/Content/Test/testReflection.tex
@@ -11,11 +11,11 @@ Even though the tests might take a while to write, we found that they were gener
 % % % % % % % % % % % % % % % % % % % %
 %\Christoffer{should the stuff below be moved to methodology reflection?}
 
-Testing also helped enforced other XP practices than refactoring. Namely collective ownership, pair programming, and continuous integration. 
+Testing also helped enforced other XP practises than refactoring. Namely collective ownership, pair programming, and continuous integration. 
 
-The XP practice of collective ownership was enforced when we wrote tests, since there was less risk that a change made by someone in the group broke the system unnoticed, since the test would detect it. This gave group members courage to change code written by others and thus allowed a feeling of ownership of all the code. 
+The XP practise of collective ownership was enforced when we wrote tests, since there was less risk that a change made by someone in the group broke the system unnoticed, since the test would detect it. This gave group members courage to change code written by others and thus allowed a feeling of ownership of all the code. 
 
-Test also enforced the pair programming practice. It gave group members a common understanding of the task to be solved. This understanding was achieved by writing test cases together, before the actual implementation of the application itself began.
+Test also enforced the pair programming practise. It gave group members a common understanding of the task to be solved. This understanding was achieved by writing test cases together, before the actual implementation of the application itself began.
 
 Likewise, continuous integration was enforced by testing. All test cases could quickly be run after a change was made, so as to be sure nothing had been broken.
 
