--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -2,9 +2,9 @@
 % 2 XP's: 2000 and 200? - differences.
 % General introduction to XP2k
 Extreme Programming is supposed to be a lightweight, efficient, and fun approach to developing software.
-One of its core points, and one of the reasons we chose XP, is the fact it contains development oriented practices.
+One of its core points, and one of the reasons we chose XP, is the fact it contains development oriented practises.
 
-\noindent XP is based on the four values \textit{Communication, Courage, Feedback, and Simplicity}, which are implemented through the use of the 12 practices:
+\noindent XP is based on the four values \textit{Communication, Courage, Feedback, and Simplicity}, which are implemented through the use of the 12 practises:
 
 \begin{tabularx}{\textwidth}{X X X}
 	40-hour Week				 & Coding Standards & Collective Ownership \\
@@ -13,12 +13,12 @@ One of its core points, and one of the reasons we chose XP, is the fact it conta
 	Simple Design          		  & Small Releases   	& Testing             
 \end{tabularx}
 
-These practices support each other (e.g. a coding standard supports pair programming), in such a way it creates a synergistic effect.
-The complete map of which practices support each other, can be seen in \Cref{fig:practiceSupport}.
+These practises support each other (e.g. a coding standard supports pair programming), in such a way it creates a synergistic effect.
+The complete map of which practises support each other, can be seen in \Cref{fig:practiceSupport}.
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.85]{Images/xpPracticeSupport.png}
-		\caption{Map of the practices and how they support each other.
+		\caption{Map of the practises and how they support each other.
 			From \textit{Extreme Programming Explained (1999)} \citep[p. 70]{xp:explained}. }
 	\label{fig:practiceSupport}
 \end{figure}
@@ -51,7 +51,7 @@ Development should be seen as a dialogue between the two developers.
 
 \paragraph{Planning Game} is the event where the customer writes user stories, after which the developers estimate them according to cost.
 
-\paragraph{Refactoring} is the practice used to improve the quality of the internal code without changing the external behaviour. Refactoring should also improve readability, and thereby maintainability.
+\paragraph{Refactoring} is the practise used to improve the quality of the internal code without changing the external behaviour. Refactoring should also improve readability, and thereby maintainability.
 
 \paragraph{Simple Design} is when every piece of code justifies its own existence. The code should not have any duplicated logic, and have the fewest possible classes and method. %A simple design is the best design. For the practise to work, the code must pass all unit- and acceptance tests. Further, the best design should not  code.
 
