--- a/Content/ReflectionMethodology/reflectionMethodology.tex
+++ b/Content/ReflectionMethodology/reflectionMethodology.tex
@@ -3,7 +3,7 @@
 \input{Content/ReflectionMethodology/reflectionPairProgramming}
 \input{Content/ReflectionMethodology/reflectionPlanning}
 
-\section{Other practices}
+\section{Other Practises}
 \input{Content/ReflectionMethodology/reflectionRefactoring}
 \input{Content/ReflectionMethodology/reflectionWorkWeek}
 \input{Content/ReflectionMethodology/reflectionCodingStandard}
