--- a/Content/ReflectionMethodology/reflectionMethodology.tex
+++ b/Content/ReflectionMethodology/reflectionMethodology.tex
@@ -4,6 +4,7 @@
 \input{Content/ReflectionMethodology/reflectionPlanning}
 
 \section{Other practices}
+The following practices were still an important part of our development process, but they have gotten less focus than \textit{pair programming} and \textit{planning game}.
 \input{Content/ReflectionMethodology/reflectionRefactoring}
 \input{Content/ReflectionMethodology/reflectionWorkWeek}
 \input{Content/ReflectionMethodology/reflectionCodingStandard}
