--- a/Addendum/TitlePage/titlepage.tex
+++ b/Addendum/TitlePage/titlepage.tex
@@ -20,7 +20,7 @@
 			\parbox{7cm}{
 				\begin{description}
 					\item {\textbf{Title:}} \\
-						Tempo Player - The music player that fits YOUR tempo\\
+						Tempo Player - Tunes for running\\
 					
 					\item {\textbf{Subject:}} \\
 						Mobile Systems\\	
