--- a/Addendum/TitlePage/titlepage.tex
+++ b/Addendum/TitlePage/titlepage.tex
@@ -20,13 +20,13 @@
 			\parbox{7cm}{
 				\begin{description}
 					\item {\textbf{Title:}} \\
-						Tempo Player - Tunes for running\\
+						Tempo Player - Tunes for Running\\
 					
 					\item {\textbf{Subject:}} \\
 						Mobile Systems\\	
 						
 					\item {\textbf{Project period:}}\\
-						  02-02-2015 -- 27-05-2015\\
+						  2015-02-02 -- 2015-05-27\\
 
 					\item {\textbf{Project group:}}\\
 						  SW802F15\\
