Songscanner module intro and use cases.

--- a/Content/SongScanner/intro.tex
+++ b/Content/SongScanner/intro.tex
@@ -2,4 +2,4 @@
 
 %The chapter contains a description of the user stories created, which acted as a basis for the development of the song scanner in regards to the requirements it should fulfil. The interesting aspects of its implementation are also described. 
 
-The song scanner module's main responsibilities are to find music files in specified directories, look up their beats per minute (BPM) online, extract album art from the files, and lastly save them in the database if they do not exist already.
+The song scanner module's main responsibilities are to find music files in specified directories, look up their tempo (BPM) online, extract album art from the files, and lastly save them in the database if they do not exist already.
