--- a/Content/SongScanner/useCases.tex
+++ b/Content/SongScanner/useCases.tex
@@ -1,6 +1,4 @@
 \section{User Stories}
-The following are the user stores used for the Song Scanner.
-
 \story{Locate music files on device.}{High}
 {As a user, I, want the application to search the directories I specify for music files.}
 {\begin{itemize}
@@ -8,8 +6,8 @@ The following are the user stores used for the Song Scanner.
 \item I can add or remove to the directories the application searches for music files.
 \end{itemize}}
 
-\story{Obtain beats-per-minute for song.}{High}
-{As a user, I, want the application to automatically obtain the beats-per-minute (BPM) of the music files located.}
+\story{Obtain tempo for song.}{High}
+{As a user, I, want the application to automatically obtain the tempo (BPM) of the music files located.}
 {\begin{itemize}
 \item Obtain 113 as BPM for Rick Astley's ``Never Gonna Give You Up'', when locating the 12 music files stored in /sdcard/Music.
 \item If no BPM is found for a song, it will not be playable.
