--- a/Content/Introduction/introduction.tex
+++ b/Content/Introduction/introduction.tex
@@ -21,8 +21,7 @@ Based on this knowledge the first problem can be stated:
 
 %Second Problem - UI%
 \noindent Operating a smartphone while running is difficult, especially if it is placed in the pocket or on the arm of the runner.
-In order for the runner to operate the smartphone, pause or change song, the runner would have to stop running, or focus more than normally. \Alexander{What about play? Maybe ``..., play, pause or change song,...''}
-This can disrupt the runner's form, and lead to injuries and accidents.
+In order for the runner to operate the smartphone; play, pause, stop, or change song, the runner would have to stop running, or focus more than normally. This can disrupt the runner's form, and lead to injuries and accidents.
 Based on this knowledge the second problem can be stated: 
 
 \begin{center}
