--- a/Content/MusicPlayer/androidTerms.tex
+++ b/Content/MusicPlayer/androidTerms.tex
@@ -9,7 +9,7 @@ A screen in the application responsible for handles UI events. It is implemented
 %\Kristian{No one writes about fragments anyway}
 
 \subsection*{Service}
-A service runs in the background with the purpose of handling long-running, persistent actions, e.g. playing music when the application: is minimised. It does not provide a user interface. \Alexander{Look at sentence structure, is ``application: is minimised'' the intended structure?}
+A service runs in the background with the purpose of handling long-running, persistent actions, e.g. playing music when the application is in the background. It does not provide a user interface.
 
 \subsection*{Sensors and Listeners}
 The device can have a number of sensors, e.g. an accelerometer, and these can be accessed by listeners. A listener implements methods like \texttt{onSensorChanged()}, which is called with a value when the sensor receives a new input. Listeners are also used to detect input events like button clicks and touches.
