--- a/Content/TempoPlayer/tour.tex
+++ b/Content/TempoPlayer/tour.tex
@@ -14,7 +14,7 @@ The Android device should be mounted on the user's arm and when the next button 
 
 When the user stands still for more than 2 seconds, the SPM are set to 0, since no steps are taken. See \Cref{sec:stepCnt} for details. 
 
-When standing still all songs in the library will be available to the user in a shuffled order. \Alexander{Sure?}
+When standing still all songs in the library will be available to the user in a shuffled order.
 
 As shown in \Cref{fig:settings}, the user can adjust some settings of the application. Currently, the only adjustment the user can make is in which directory the application looks for songs. This settings screen is shown in \Cref{fig:settingsPath}. 
 
