nuduru todo removed

--- a/Content/ReflectionMethodology/reflectionCodingStandard.tex
+++ b/Content/ReflectionMethodology/reflectionCodingStandard.tex
@@ -1,4 +1,4 @@
 \subsection{Coding Standard}
 In the first two thirds of the project our only coding standards were how variables were named, and where brackets should be. We decided to only add to the coding standard if we were in disagreement about how to write code. Later we found that this was insufficient. The conflict never arose, even though group members wrote code differently.
 
-We ended up creating a more detailed and formal coding standard which can be seen in\Christoffer{Make reference to coding standard section}. Code written after the improvement of the original coding standard improved the quality of the code.
+We ended up creating a more detailed and formal coding standard which can be seen in. Code written after the improvement of the original coding standard improved the quality of the code.
