Fixed a few todos

--- a/Content/StepCounter/dataCollection.tex
+++ b/Content/StepCounter/dataCollection.tex
@@ -4,7 +4,7 @@ As there is no built-in step counter library available for Android API version 1
 The first step of data collection is to figure out what data to collect, to do this we take a look at the available sensors on an Android smartphone, \citet{android:sensor} gives an overview of these. We decided to gather data from three sensors: accelerometer, gravity and gyroscope. We also measured the time delay between each sensor reading.
 
 \subsubsection{Collection Procedure}
-To generate the sample data we had a person perform the following tasks while carrying the smartphone in a specific position (in hand, in pocket or strapped to arm). \Alexander{Purpose is now strictly arm, shouldn't we change it here then?}
+To generate the sample data we had a person perform the following tasks while having the smartphone strapped to the arm. 
 \begin{enumerate}
 \item Walk 100 steps. \textit{Walk: to advance on foot at a moderate speed; proceed by steps; move by advancing the feet alternately so that there is always one foot on the ground.}\citep[Walk]{dict:reference} %http://dictionary.reference.com/browse/walk?s=t
 \item Jog 100 steps. \textit{Jog: to run at a leisurely, slow pace.}\citep[Jog]{dict:reference} %http://dictionary.reference.com/browse/jog?s=t
