--- a/Content/ReflectionMethodology/reflectionWorkWeek.tex
+++ b/Content/ReflectionMethodology/reflectionWorkWeek.tex
@@ -1,4 +1,4 @@
 \subsection{40-hour Work Week}
-For the duration of the project we tried to keep fixed work hours. Occasionally we worked overtime to get an important task done. We experienced that when we worked overtime, productivity per hour lessened both on the day itself and the next day. There was, however, not a clear correlation between overtime and burnout. We also found that productivity during and the day after working overtime depended on the person and the task being worked on. If the person was interested in the task, more work was done. 
+For the duration of the project we tried to keep fixed work hours. Occasionally we worked overtime to get an important task done. We experienced that when we worked overtime, productivity per hour lessened both on the day itself and the next day. There was, however, not a clear correlation between overtime and burnout. We also found that productivity during the day and the next, after working overtime depended on the person and the task being worked on. If the person was interested in the task, more work was done. 
 
 Overall, we think that overtime should be avoided if possible, but also that it is sometimes necessary to get a task done.
