--- a/Content/ReflectionMethodology/reflectionCollectiveOwnership.tex
+++ b/Content/ReflectionMethodology/reflectionCollectiveOwnership.tex
@@ -2,3 +2,5 @@
 For most of the duration of the project, there was not a complete feeling of collective ownership. We attempted to address this by enforcing mandatory commits to the code repository. This, however, was not done consistently because it was not a part of our daily routine. Therefore it was often skipped. Furthermore the inconsistency in coding style did not help, however this changed after we started focusing on refactoring and coding standards.
 
  Ultimately, ownership felt collective but authorship not so much. This had a negative impact on our refactoring for most of the project.
+ 
+ \Alexander{Expand and mention adaptation in 2.3}
