Last todo for methodology.

--- a/Content/ReflectionMethodology/reflectionTesting.tex
+++ b/Content/ReflectionMethodology/reflectionTesting.tex
@@ -1,3 +1,4 @@
 \subsection{Testing}
 %\Christoffer{slice reflections from Test section and put here?}
 Test reflections has been covered in \Cref{sec:testImplObservations}.
+\Alexander{Definitely move methodology observation of test here!}
