coding standard reflection rewritten

--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -1,4 +1,4 @@
-\section{Adaptation of Extreme Programming}
+\section{Adaptation of Extreme Programming}\label{sec:adaptations}
 This project is developed with an educational purpose, to which some requirements and restrictions exist.
 Partly due to these requirements and restrictions, we made some adaptations to XP for it to fit inside the project parameters.
 
