--- a/Content/ReflectionMethodology/reflectionCodingStandard.tex
+++ b/Content/ReflectionMethodology/reflectionCodingStandard.tex
@@ -1,6 +1,5 @@
-\subsection{Coding Standard}
-In the first two thirds of the project our only coding standards were how variables were named, and where brackets should be. We decided to only add to the coding standard if we were in disagreement about how to write code. Later we found that this was insufficient. The conflict never arose, even though group members wrote code differently.
-
-We ended up creating a more detailed and formal coding standard which can be seen in. Code written after the improvement of the original coding standard improved the quality of the code.
-
-\Alexander{Rewrite and mention adaptation in 2.3}
+\subsection{Code Standard}
+In \Cref{sec:adaptations} we mentioned that creating a formal code standard would be too time consuming to do, and we ran with this assumption for the first few iterations.
+After a while, when refactoring and collective ownership became more prevalent, we realised that the lack of a code standard resulted in code some times being slightly inconsistent, potentially making it harder to understand.
+This led us to talk about creating a more formal code standard, and we began writing it down.
+In the end, however, we did not spend much time on looking at the finished document, but the thorough discussion of the subject led us to writing more uniform code.
