--- a/Content/ReflectionMethodology/reflectionCollectiveOwnership.tex
+++ b/Content/ReflectionMethodology/reflectionCollectiveOwnership.tex
@@ -1,6 +1,10 @@
 \subsection{Collective Ownership}
 For most of the duration of the project, there was not a complete feeling of collective ownership. We attempted to address this by enforcing mandatory commits to the code repository. This, however, was not done consistently because it was not a part of our daily routine. Therefore it was often skipped. Furthermore the inconsistency in coding style did not help, however this changed after we started focusing on refactoring and coding standards.
 
- Ultimately, ownership felt collective but authorship not so much. This had a negative impact on our refactoring for most of the project.
- 
- \Alexander{Expand and mention adaptation in 2.3}
+In \Cref{sec:adaptations} there were three risks identified related to \texttt{Collective Ownership}. Regarding the first problem, lack of expertise, we experienced few occasions where we found ourselves hindered when writing code, and found it necessary to ask other group members for help. This is a sign we had issues sharing expertise about the code base, to all members of the group.
+
+The second problem of violating each other's private space, by editing and crashing the document another developer was using, happened a couple of times.
+These incidents were resolved without any conflict, although we discovered our test framework was not enough.
+
+The last problem of personal pride did not surface.
+We believe this was due to us having prior work experience with each other.
