--- a/Addendum/TitlePage/abstract.tex
+++ b/Addendum/TitlePage/abstract.tex
@@ -2,7 +2,7 @@ The purpose of this project was to make a runner's running experience less tedio
 The project is based on the research of Edworthy and Waring, which concluded that music tempo affects a runner's pace and enjoyment.
 The project will produce an Android application capable of playing music, detecting step-per-minute, and navigation without looking at the screen.
 The application will be developed through Extreme Programming, as we try to adapt it to our project.\\
-The project resulted in an Android application playing music and detecting steps-per-minute by using \citet{zhao:pedometer} algorithm.
+The project resulted in an Android application playing music and detecting steps-per-minute.
 We found Extreme Programming to be a productive methodology.
-We did not fully adapt the practices small releases, continuois integration, and collective ownership.
+We did not fully adapt the practices small releases, continuous integration, and collective ownership.
 We fully adapted and experimented with pair programming and planning game.
